crud three tables

--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -303,7 +303,7 @@
                         <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/history">Historia</a></li>
                         <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/members">Skład</a></li>
                         <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/albums">Galeria</a></li>
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/contact">Kontakt</a></li>
+                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/con">Kontakt</a></li>
 
                     </ul>
                 </ol>
