--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
@@ -33,6 +33,18 @@
             <div class="gplus"><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/album"><i class="icon-th"></i></a></div>
         </div>
 
+        <div class="col-md-3">
+            <div class="gplus"><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/carousel"><i class="icon-mail-alt"></i></a></div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="gplus"><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/story"><i class="icon-mail-alt"></i></a></div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="gplus"><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/contact"><i class="icon-mail-alt"></i></a></div>
+        </div>
+
         <div style="clear: both"></div>
 
 
