--- a/symfonyCRUDpanel/app/Resources/views/contact/edit.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/contact/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Carousel edit</h1>
+    <h1>Contact edit</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('carousel_index') }}">Back to the list</a>
+            <a href="{{ path('contact_index') }}">Back to the list</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
