--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
@@ -12,8 +12,18 @@
 
 
         <div class="col-md-3">
-            <div class="yt"><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/tasks"><i
-                            class="icon-comment-empty"></i></a></div>
+
+            <div class="yt">
+
+                <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/tasks"><i
+                            class="icon-comment-empty"></i></a>
+                {#<div class="info" >#}
+                    {#<p>Dodawaj lub usuwać newsy.</p>#}
+
+
+                {#</div><!-- /.info -->#}
+
+            </div>
         </div>
 
         <div class="col-md-3">
