--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/carousel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/carousel.html.twig
@@ -28,7 +28,7 @@
                 {% else %}
                     <div class="item">
                         <img class="second-slide" style="margin: auto"
-                             src="{{ path('file_show', { 'filename': image.cfilename }) }}" alt="Second slide">
+                             src="{{ path('cfile_show', { 'filename': image.cfilename }) }}" alt="Second slide">
                         <div class="container">
                             <div class="carousel-caption">
                                 <h1></h1>
