--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -33,7 +33,24 @@
         body {
             font-family: 'Lato', sans-serif;
             font-size: 150%;
+            /*background-color: #222930;*/
         }
+
+        .breadcrumb {
+            background-color: #161b20;
+        }
+
+        body > div.container > div:nth-child(5) > div:nth-child(1) {
+            background-color: #2f4052;
+            text-align: center;
+        }
+
+        body > div.container > div:nth-child(5) > div:nth-child(2) {
+            text-align: center;
+            background-color: #161b20;
+        }
+
+
 
         .container {
             width: 100%;
@@ -82,12 +99,25 @@
         body > div > nav > div {
             background-color: #c34f4f;
             width: 100%;
+            -webkit-transition: all 800ms ease-out;
+            -moz-transition: all 800ms ease-out;
+            -o-transition: all 800ms ease-out;
+            transition: all 800ms ease-out;
+        }
+        body > div > nav > div:hover {
+            background-color: #3BA66E;
+            width: 100%;
+            -webkit-transition: all 800ms ease-out;
+            -moz-transition: all 800ms ease-out;
+            -o-transition: all 800ms ease-out;
+            transition: all 800ms ease-out;
         }
 
         .fb {
             /*width: 50%;*/
             /*height: 155px;*/
             /*float: left;*/
+            /*background-color: #7c95cc;*/
         }
 
         .fb:hover {
@@ -117,6 +147,7 @@
             /*width: 50%;*/
             /*height: 155px;*/
             /*float: left;*/
+            /*background-color: #e68488;*/
         }
 
         .yt:hover {
@@ -127,11 +158,118 @@
             transition: all 600ms ease-out;
         }
 
+        .squad {
+            background-color: #dcba45;
+        }
+
+        .squad:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+        .albums {
+            background-color: #f17436;
+        }
+
+        .albums:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+        .images {
+            background-color: #4fade3;
+        }
+
+        .images:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+
+
+        .post {
+            background-color: #d95333;
+        }
+
+        .post:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+
+        .caro {
+            background-color: #d95333;
+        }
+
+        .caro:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+
+        .story {
+            background-color: #d95333;
+        }
+
+        .story:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+
+        .contact {
+            background-color: #d95333;
+        }
+
+        .contact:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
+        }
+
+        .carousel {
+            background-color: #161b20;
+            -webkit-transition: all 800ms ease-out;
+            -moz-transition: all 800ms ease-out;
+            -o-transition: all 800ms ease-out;
+            transition: all 800ms ease-out;
+        }
+
+        .carousel:hover {
+            background-color: #3BA66E;
+            -webkit-transition: all 800ms ease-out;
+            -moz-transition: all 800ms ease-out;
+            -o-transition: all 800ms ease-out;
+            transition: all 800ms ease-out;
+        }
+
+
+
+
+        #content > div > a > div {
+            padding: 4px;
+        }
         .tw {
             /*width: 50%;*/
             /*height: 155px;*/
             /*height: 100%;*/
             /*float: left;*/
+            /*background-color: #3095a3;*/
+
         }
 
         .tw:hover {
@@ -344,12 +482,12 @@
 <div class="container">
 
 
-    <ol class="breadcrumb">
+    <div class="breadcrumb">
 
         <h1 style="color: #c34f4f;text-align: center">orkiestra.com</h1>
 
 
-    </ol>
+    </div>
     {#<div class="logo">#}
     {#<h1 style="color: #c34f4f;text-align: center">orkiestra.com</h1>#}
 
@@ -484,7 +622,7 @@
     <!--</div>-->
 
     <div class="container-fluid">
-        <div class="row" style="text-align: center; background-color: #5e5e5e;">
+        <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <div class="col-md-3">
@@ -514,7 +652,7 @@
         </div>
 
 
-        <div class="row" style="text-align: center; background-color: #8c8c8c">
+        <div class="row">
             <div class="col-md-12">
                 <p style="padding: 20px;">orkietstra.com &copy; 2016 Developed<a href="http://krzysztofsikora24.pl">
                         Krzysztof Sikora </a><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/panel">Panel</a>
