--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
         body {
             font-family: 'Lato', sans-serif;
             font-size: 150%;
-            /*background-color: #222930;*/
+            background-color: #222930;
         }
 
         .breadcrumb {
@@ -50,7 +50,9 @@
             background-color: #161b20;
         }
 
-
+        body > div.container > div.breadcrumb {
+            border-radius: 0;
+        }
 
         .container {
             width: 100%;
@@ -194,7 +196,7 @@
 
 
         .post {
-            background-color: #d95333;
+            background-color: #589f5a;
         }
 
         .post:hover {
@@ -206,9 +208,14 @@
         }
 
         .caro {
-            background-color: #d95333;
+            background-color: #5e80b9;
         }
-
+        a {
+            color:white;
+        }
+        /*a:hover {*/
+            /*color:white;*/
+        /*}*/
         .caro:hover {
             background-color: #3BA66E;
             -webkit-transition: all 600ms ease-out;
@@ -218,7 +225,7 @@
         }
 
         .story {
-            background-color: #d95333;
+            background-color: #c73a3a;
         }
 
         .story:hover {
@@ -241,21 +248,33 @@
             transition: all 600ms ease-out;
         }
 
-        .carousel {
-            background-color: #161b20;
-            -webkit-transition: all 800ms ease-out;
-            -moz-transition: all 800ms ease-out;
-            -o-transition: all 800ms ease-out;
-            transition: all 800ms ease-out;
+        .logout {
+            background-color: #5aa15c;
         }
 
-        .carousel:hover {
+        .logout:hover {
             background-color: #3BA66E;
-            -webkit-transition: all 800ms ease-out;
-            -moz-transition: all 800ms ease-out;
-            -o-transition: all 800ms ease-out;
-            transition: all 800ms ease-out;
+            -webkit-transition: all 600ms ease-out;
+            -moz-transition: all 600ms ease-out;
+            -o-transition: all 600ms ease-out;
+            transition: all 600ms ease-out;
         }
+
+        /*.carousel {*/
+            /*background-color: #161b20;*/
+            /*-webkit-transition: all 800ms ease-out;*/
+            /*-moz-transition: all 800ms ease-out;*/
+            /*-o-transition: all 800ms ease-out;*/
+            /*transition: all 800ms ease-out;*/
+        /*}*/
+
+        /*.carousel:hover {*/
+            /*background-color: #3BA66E;*/
+            /*-webkit-transition: all 800ms ease-out;*/
+            /*-moz-transition: all 800ms ease-out;*/
+            /*-o-transition: all 800ms ease-out;*/
+            /*transition: all 800ms ease-out;*/
+        /*}*/
 
 
 
