--- a/symfonyCRUDpanel/web/css/fontello.css
+++ b/symfonyCRUDpanel/web/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?48106271');
-  src: url('../font/fontello.eot?48106271#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?48106271') format('woff2'),
-       url('../font/fontello.woff?48106271') format('woff'),
-       url('../font/fontello.ttf?48106271') format('truetype'),
-       url('../font/fontello.svg?48106271#fontello') format('svg');
+  src: url('../font/fontello.eot?77253313');
+  src: url('../font/fontello.eot?77253313#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?77253313') format('woff2'),
+       url('../font/fontello.woff?77253313') format('woff'),
+       url('../font/fontello.ttf?77253313') format('truetype'),
+       url('../font/fontello.svg?77253313#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?48106271#fontello') format('svg');
+    src: url('../font/fontello.svg?77253313#fontello') format('svg');
   }
 }
 */
@@ -55,12 +55,16 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-camera:before { content: '\e800'; font-size: 72px; margin: 40px } /* '' */
-.icon-th:before { content: '\e801'; font-size: 72px; margin: 40px } /* '' */
-.icon-users:before { content: '\e802'; font-size: 72px; margin: 40px } /* '' */
-.icon-mail-alt:before { content: '\f0e0'; font-size: 72px; margin: 40px } /* '' */
-.icon-comment-empty:before { content: '\f0e5'; font-size: 72px; margin: 40px } /* '' */
-.icon-youtube-squared:before { content: '\f166'; font-size: 72px; margin: 40px } /* '' */
-.icon-facebook:before { content: '\f30c'; font-size: 72px; margin: 40px } /* '' */
-.icon-gplus:before { content: '\f30f'; font-size: 72px; margin: 40px } /* '' */
-.icon-instagram:before { content: '\f32d'; font-size: 72px; margin: 40px } /* '' */
+.icon-camera:before { content: '\e800'; font-size: 72px; margin: 40px} /* '' */
+.icon-th:before { content: '\e801'; font-size: 72px; margin: 40px} /* '' */
+.icon-users:before { content: '\e802'; font-size: 72px; margin: 40px} /* '' */
+.icon-docs:before { content: '\e803'; font-size: 72px; margin: 40px} /* '' */
+.icon-hourglass:before { content: '\e804'; font-size: 72px; margin: 40px} /* '' */
+.icon-logout:before { content: '\e805'; font-size: 72px; margin: 40px} /* '' */
+.icon-mail-alt:before { content: '\f0e0'; font-size: 72px; margin: 40px} /* '' */
+.icon-comment-empty:before { content: '\f0e5'; font-size: 72px; margin: 40px} /* '' */
+.icon-youtube-squared:before { content: '\f166'; font-size: 72px; margin: 40px} /* '' */
+.icon-snapchat-square:before { content: '\f2ad'; font-size: 72px; margin: 40px} /* '' */
+.icon-facebook:before { content: '\f30c'; font-size: 72px; margin: 40px} /* '' */
+.icon-gplus:before { content: '\f30f'; font-size: 72px; margin: 40px} /* '' */
+.icon-instagram:before { content: '\f32d'; font-size: 72px; margin: 40px} /* '' */
