--- a/symfonyCRUDpanel/app/Resources/views/album/new.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/album/new.html.twig
@@ -7,7 +7,7 @@
         {{ form_widget(form) }}
         <input type="submit" value="Create" />
     {{ form_end(form) }}
-
+    {{ err }}
     <ul>
         <li>
             <a href="{{ path('album_index') }}">Back to the list</a>
