--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -38,6 +38,14 @@
 
         .breadcrumb {
             background-color: #161b20;
+            /*background: rgba(241,231,103,1);*/
+            /*background: -moz-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(34,41,48,1)));*/
+            /*background: -webkit-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -o-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -ms-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: radial-gradient(ellipse at center, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#222930', GradientType=1 );*/
         }
 
         body > div.container > div:nth-child(5) > div:nth-child(1) {
