--- a/symfonyCRUDpanel/app/Resources/views/contact/show.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/contact/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Contact</h1>
+    <h1>Kontakt</h1>
 
     <table>
         <tbody>
@@ -10,31 +10,31 @@
                 <td>{{ contact.id }}</td>
             </tr>
             <tr>
-                <th>Cofilename</th>
+                <th>Nazwa obrazka</th>
                 <td>{{ contact.cofilename }}</td>
             </tr>
             <tr>
-                <th>Conmime</th>
+                <th>Typ obrazka</th>
                 <td>{{ contact.conmime }}</td>
             </tr>
             <tr>
-                <th>Cocontents</th>
+                <th>Obrazek</th>
                 <td>{{ contact.cocontents }}</td>
             </tr>
             <tr>
-                <th>Condescription</th>
+                <th>Opis</th>
                 <td>{{ contact.condescription }}</td>
             </tr>
             <tr>
-                <th>Conname</th>
+                <th>Imię i nazwisko</th>
                 <td>{{ contact.conname }}</td>
             </tr>
             <tr>
-                <th>Tel</th>
+                <th>Telefon</th>
                 <td>{{ contact.tel }}</td>
             </tr>
             <tr>
-                <th>Meil</th>
+                <th>Email</th>
                 <td>{{ contact.meil }}</td>
             </tr>
         </tbody>
@@ -42,14 +42,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('contact_index') }}">Back to the list</a>
+            <a href="{{ path('contact_index') }}">Powrót do listy</a>
         </li>
         <li>
-            <a href="{{ path('contact_edit', { 'id': contact.id }) }}">Edit</a>
+            <a href="{{ path('contact_edit', { 'id': contact.id }) }}">Edycja</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Usuń">
             {{ form_end(delete_form) }}
         </li>
     </ul>
