--- a/symfonyCRUDpanel/app/Resources/views/tasks/show.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/tasks/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tasks</h1>
+    <h1>Posty</h1>
     <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
 
     <table>
@@ -11,11 +11,11 @@
                 <td>{{ task.id }}</td>
             </tr>
             <tr>
-                <th>Title</th>
+                <th>Tytuł</th>
                 <td>{{ task.title }}</td>
             </tr>
             <tr>
-                <th>Description</th>
+                <th>Opis</th>
                 <td>{{ task.description }}</td>
             </tr>
             <tr>
@@ -23,7 +23,7 @@
                 <td>{% if task.status %}Yes{% else %}No{% endif %}</td>
             </tr>
             <tr>
-                <th>Posted</th>
+                <th>Data dodania</th>
                 <td>{% if task.posted %}{{ task.posted|date('Y-m-d H:i:s') }}{% endif %}</td>
             </tr>
         </tbody>
@@ -31,14 +31,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('tasks_index') }}">Back to the list</a>
+            <a href="{{ path('tasks_index') }}">Powrót do listy</a>
         </li>
         <li>
-            <a href="{{ path('tasks_edit', { 'id': task.id }) }}">Edit</a>
+            <a href="{{ path('tasks_edit', { 'id': task.id }) }}">Edycja</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Usuń">
             {{ form_end(delete_form) }}
         </li>
     </ul>
