--- a/symfonyCRUDpanel/app/Resources/views/carousel/new.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/carousel/new.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Carousel creation</h1>
+    <h1>Dodawanie zdjęcia do karuzeli</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Dodaj" />
     {{ form_end(form) }}
     {{ err }}
 
     <ul>
         <li>
-            <a href="{{ path('carousel_index') }}">Back to the list</a>
+            <a href="{{ path('carousel_index') }}">Powrót do listy</a>
         </li>
     </ul>
 {% endblock %}
