--- a/symfonyCRUDpanel/app/Resources/views/carousel/show.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/carousel/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Carousel</h1>
+    <h1>Zdjęcia karuzeli</h1>
 
     <table>
         <tbody>
@@ -10,15 +10,15 @@
                 <td>{{ carousel.id }}</td>
             </tr>
             <tr>
-                <th>Cfilename</th>
+                <th>Nazwa zdjęcia</th>
                 <td>{{ carousel.cfilename }}</td>
             </tr>
             <tr>
-                <th>Cmime</th>
+                <th>Typ zdjecia</th>
                 <td>{{ carousel.cmime }}</td>
             </tr>
             <tr>
-                <th>Ccontents</th>
+                <th>Zdjęcie</th>
                 <td>{{ carousel.ccontents }}</td>
             </tr>
         </tbody>
@@ -26,14 +26,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('carousel_index') }}">Back to the list</a>
+            <a href="{{ path('carousel_index') }}">Powrót do listy</a>
         </li>
         <li>
-            <a href="{{ path('carousel_edit', { 'id': carousel.id }) }}">Edit</a>
+            <a href="{{ path('carousel_edit', { 'id': carousel.id }) }}">Edytuj</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Usuń">
             {{ form_end(delete_form) }}
         </li>
     </ul>
