--- a/symfonyCRUDpanel/app/Resources/views/image/show.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/image/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Image</h1>
+    <h1>Zdjęcie</h1>
 
     <table>
         <tbody>
@@ -10,7 +10,7 @@
             <td>{{ image.id }}</td>
         </tr>
         <tr>
-            <th>Filename</th>
+            <th>Nazwa</th>
             <td>{{ image.filename }}</td>
             <a href="{{ path('file_show', { 'filename': image.filename }) }}"><img
                         src="{{ path('file_show', { 'filename': image.filename }) }}  " style="height: 250px"></a>
@@ -29,11 +29,11 @@
         {#<td>{{ image.contents }}</td>#}
         {#</tr>#}
         {#<tr>#}
-        <th>Category</th>
+        <th>Album</th>
         <td>{{ image.album }}</td>
         </tr>
         <tr>
-        <th>Description</th>
+        <th>Opis</th>
         <td>{{ image.description }}</td>
         </tr>
         </tbody>
@@ -41,14 +41,14 @@
 
     <ul>
         <li>
-            <a href="{{ path('image_index') }}">Back to the list</a>
+            <a href="{{ path('image_index') }}">Powrót do listy</a>
         </li>
         <li>
-            <a href="{{ path('image_edit', { 'id': image.id }) }}">Edit</a>
+            <a href="{{ path('image_edit', { 'id': image.id }) }}">Edycja</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
+            <input type="submit" value="Usuń">
             {{ form_end(delete_form) }}
         </li>
     </ul>
