--- a/symfonyCRUDpanel/app/Resources/views/tasks/edit.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/tasks/edit.html.twig
@@ -1,21 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tasks edit</h1>
+    <h1>Edytuj post</h1>
     <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+        <input type="submit" value="Edytuj" />
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('tasks_index') }}">Back to the list</a>
+            <a href="{{ path('tasks_index') }}">Powrót do listy</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <input type="submit" value="Usuń">
             {{ form_end(delete_form) }}
         </li>
     </ul>
