--- a/symfonyCRUDpanel/app/Resources/views/tasks/new.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/tasks/new.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tasks creation</h1>
+    <h1>Tworzenie posta</h1>
     <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Utwórz" />
     {{ form_end(form) }}
 
     <ul>
         <li>
-            <a href="{{ path('tasks_index') }}">Back to the list</a>
+            <a href="{{ path('tasks_index') }}">Powrót do listy</a>
         </li>
     </ul>
 {% endblock %}
