--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -33,9 +33,25 @@
         body {
             font-family: 'Lato', sans-serif;
             font-size: 150%;
-            background-color: #222930;
+            /*background-color: #222930;*/
+            background-color: #f1f1f1;
         }
 
+        /*kolor a w task index*/
+       ul > li > a {
+            list-style-type: none;
+            color: red;
+        }
+        ul > li {
+            list-style-type: none;
+
+        }
+
+        #content > div > div {
+            background-color: #ffffff;
+            padding: 5px;
+            border: solid 1px;
+        }
         .breadcrumb {
             background-color: #161b20;
             /*background: rgba(241,231,103,1);*/
