--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/index.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,7 @@
         {% for article in pagination %}
 
             <!-- Comment -->
-            <div class="media" style="border-bottom: dotted 2px;">
+            <div class="media">
                 <div class="media-body">
                     <h4 class="media-heading">{{ article.title }}
                         <small style="float: right">{{ article.posted|date('Y-m-d H:i:s') }}</small>
