--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
@@ -81,7 +81,7 @@
                 <div class="logout"><i class="icon-logout"></i></div>
             </div>
         </a>
-        <div style="clear: both"></div>
+        {#<div style="clear: both"></div>#}
 
 
     </div>
