--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
@@ -1,17 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Historia</h1>
 
+<div class="col-md-12">
+    <h1>Historia</h1>
+    <div class="media">
+        <div class="media-body">
     {% for story in stories %}
 
+        <!-- Comment -->
 
-            <p>{{ story.paragraph }}</p>
+             <p> {{ story.paragraph }}</p>
+
+
 
 
     {% endfor %}
+</div>
+    </div>
 
-
+</div>
 
 
 {% endblock %}
