contact order asc

--- a/symfonyCRUDpanel/app/Resources/views/squad/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/squad/index.html.twig
@@ -73,9 +73,10 @@
                             </ul>
                         </ul></small>
                     <small>{{ squad.descriptionnn }}</small>
+                    <small>{{ squad.position }}</small>
                 </h4>
 
-                {{ squad.info }}
+               Pozycja {{ squad.info }}
             </div>
             </div>
 
