contact order asc

--- a/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
@@ -91,12 +91,15 @@
 
                         <small style="float: right">
                             <ul>
-                                <ul>
+                                <ul>Pozycja{{ contact.position }}
                                     <li>
                                         Nazwa obrazka: {{ contact.cofilename }}
                                     </li>
                                     <li>
                                         Typ obrazka: {{ contact.conmime }}
+                                    </li>
+                                    <li>
+                                        Pozycja: {{ contact.position }}
                                     </li>
                                 </ul>
                             </ul></small>
